<resources>
    <string name="app_name">FitnessApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Training Plans</string>
    <string name="menu_slideshow">Exercises</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_preferences" translatable="false">de.university.reutlingen.mobile.computing.fitnessApp.LOGIN_PREFERENCES</string>
    <string name="login_preferences_token" translatable="false">{}</string>
    <string name="btn_login">Login</string>
    <string name="btn_password_reset">Reset Password</string>
    <string name="hint_username">Enter Username</string>
    <string name="hint_password">Enter Password</string>
    <string name="btn_load_exercise">Load Exercise</string>
    <string name="lbl_plan_id">Training Plan Id</string>
    <string name="btn_show_Exercise_Description">Show Description</string>
    <string name="text_view_session_weight">Weight</string>
    <string name="text_view_session_reps">Reps</string>
    <string name="text_view_nr_sets">Sets</string>
    <string name="text_view_session_breaktime">Break</string>
    <string name="btn_minus_symbol" translatable="false">-</string>
    <string name="btn_plus_symbol" translatable="false">+</string>
    <string name="plain_text_stay_fit_logo_part_1" translatable="false">Stay</string>
    <string name="plain_text_stay_fit_logo_part_2" translatable="false">Fit</string>
    <string name="btn_register">Register</string>


</resources>
